--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,10 @@ DB_QUEUE_LIMIT=0
 
 JWT_SECRET=super-secret-futura-key
 JWT_EXPIRES_IN=8h
+
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=notification.alert@equicomservices.com
+EMAIL_PASSWORD=your-app-password-here
+EMAIL_FROM=notification.alert@equicomservices.com
